Add workspaces img

--- a/src/content/docs/features.mdx
+++ b/src/content/docs/features.mdx
@@ -13,7 +13,7 @@ Hüma sürekli geliştirilmektedir yeni özellikleri edinmek için tarayıcını
 
 ## Dikey Sekmeler
 
-<img src="https://firebasestorage.googleapis.com/v0/b/vastsea-blog.appspot.com/o/mUj553KYSMNLQxdU68FR2cl0AFG3%2Fhumasekmeleri.png?alt=media&token=f56918a9-1cb2-4a13-89cb-f71f5479d050" />
+<img src="../../assets/image.png" />
 
 Dikey sekmeler: Hüma Tarayıcısı için Yenilikçi Dikey Sekme Eklentisi
 
@@ -44,50 +44,9 @@ Hüma Gezgini, Hüma Başlangıç sayfasındaki araçları içeren ve ek özelli
 Hüma Gezgini, Hüma Başlangıç sayfasındaki araçları kapsayan ve kullanıcıların tarayıcı deneyimlerini daha verimli bir şekilde yönetmelerine olanak tanıyan geniş bir yapıdır.
 
 
-## Hüma Başlangıç
-
-**Hüma Başlangıç:** Hüma tarayıcısının başlangıç sayfası olarak işlev gören, kullanıcıların tarayıcıyı açtıklarında karşılaştıkları ve çeşitli araçlara hızlı erişim sağlayan bir özelliktir.
-
-<img src="https://firebasestorage.googleapis.com/v0/b/vastsea-blog.appspot.com/o/mUj553KYSMNLQxdU68FR2cl0AFG3%2FEkran%20G%C3%B6r%C3%BCnt%C3%BCs%C3%BC%20-%202024-08-11%2005-11-37.png?alt=media&token=afe97493-cc6b-4e71-9936-3c62a5a300b8" />
-
-Hüma Başlangıç, kullanıcılara tarayıcı açıldığında kolayca erişebilecekleri bir ana sayfa sunar. Bu sayfa, kullanıcıların sık kullandıkları araçları ve bilgilere erişimini kolaylaştırır.
-
-### **Özellikler:**
-- **Yer İmleri Yöneticisi:** Kullanıcıların sık kullanılan web sitelerini düzenleyebilmelerini ve erişebilmelerini sağlar.
-- **Hesap Makinesi:** Tarayıcı üzerinden hesaplama yapabilme imkanı sunar.
-- **Yapılacaklar Listesi:** Günlük görevleri ve yapılacak işleri takip edebilmenize yardımcı olur.
-
-Hüma Başlangıç, tarayıcı açıldığında kullanıcılara hızlı erişim sağlayan bir başlangıç noktasıdır ve çeşitli araçları tek bir yerde toplar.
-
-
-## Hüma İçerik
-<img src="https://firebasestorage.googleapis.com/v0/b/vastsea-blog.appspot.com/o/mUj553KYSMNLQxdU68FR2cl0AFG3%2FEkran%20G%C3%B6r%C3%BCnt%C3%BCs%C3%BC%20-%202024-08-11%2005-12-35.png?alt=media&token=3689e9b0-3202-46d5-b3ef-28692dce891e" />
-
-**Hüma İçerik:** Beğendiğiniz makaleleri daha sonra okumak üzere kaydetmenizi sağlayan bir özelliktir.
-
-Hüma İçerik, kullanıcıların web sayfalarını sağ tıklayarak "Bu sayfayı okumalarına kaydet" seçeneği ile kaydedebilir ve bu içeriklere Hüma Başlangıç sayfasından erişebilirler.
-
-### **Özellikler:**
-- **Sayfa Kaydetme:** Web sayfalarını hızlı bir şekilde kaydedebilirsiniz.
-- **Kaydedilen İçeriklere Erişim:** Hüma Başlangıç sayfasından kaydedilen içeriklere erişebilir ve okuyabilirsiniz.
-- **İçeriği Silme:** Kaydedilen içerikleri Hüma Gezgini Gelişmiş Ayarlar sayfasından silebilirsiniz.
-
-Hüma İçerik, kullanıcıların ilgi çekici makaleleri bir kenara koymalarını sağlar.
-
-## Hüma Gözlem Odası
-<img src="https://firebasestorage.googleapis.com/v0/b/vastsea-blog.appspot.com/o/mUj553KYSMNLQxdU68FR2cl0AFG3%2FEkran%20G%C3%B6r%C3%BCnt%C3%BCs%C3%BC%20-%202024-08-11%2005-18-45.png?alt=media&token=53e6d1de-c0ac-462e-af58-3d0b47378690" />
-
-**Hüma Gözlem Odası:** Kullanıcıların tarayıcı etkinliklerini grafiklerle görselleştiren ve alışkanlık takibi yapan bir özelliktir.
-
-Hüma Gözlem Odası, kullanıcıların haftalık tarayıcı etkinliklerini görselleştirir ve yalnızca tarayıcıda veri saklar. Bu özellik, kullanıcının tarayıcı alışkanlıklarını analiz etmesine olanak tanır.
-
-### **Özellikler:**
-- **Etkinlik Grafikleri:** Haftalık tarayıcı etkinliklerini grafiklerle gösterir.
-- **Veri Saklama:** Veriler yalnızca tarayıcıda saklanır.
-- **Deneysel Özellik:** Varsayılan olarak kapalıdır; kullanıcı geri bildirimlerine göre değerlendirilir.
-
-Hüma Gözlem Odası, kullanıcıların tarayıcı alışkanlıklarını analiz etmelerini sağlar.
-
+ 
+ 
+ 
 ## Hüma Kenar Çubuğu
 
 <img src="https://firebasestorage.googleapis.com/v0/b/vastsea-blog.appspot.com/o/mUj553KYSMNLQxdU68FR2cl0AFG3%2FEkran%20G%C3%B6r%C3%BCnt%C3%BCs%C3%BC%20-%202024-08-11%2005-21-13.png?alt=media&token=5df8c5a0-7848-4078-8c6c-7627ed580b75" />
