--- a/src/content/docs/manifesto.mdx
+++ b/src/content/docs/manifesto.mdx
@@ -3,26 +3,27 @@ title:  Manifesto
 description: Hüma tarayıcısının manifestosu
 ---
 
-### 1. Özgürlük
-Hüma her zaman özgürlüğü savunur. İzlediği yol, özgürlüğün ve bilginin sarsılmaz yoludur. Kendi özgürlüğünde yol alır ve gelişir, hiçbir şeye ihtiyaç duymadan. Özgürlüğe atılacak her taş ve özgürlüğe zarar verecek her tehdide karşı durur. Hüma, onu doğru ve özgür yoldan saptıracak her şeye karşıdır.
+# İnternet Özgürlüğü Manifestosu
 
-Hüma, sadece kendisinin değil, yoldaşlarının da özgürlüğünü korur. Onların özgürlüğü, Hüma'nın özgürlüğüdür. Yoldaşlar, Hüma'yı kullanan, tercih eden ve benzer düşünenlerdir.
+1. **Evrensel Erişim:** İnternet, ırk, cinsiyet, yaş, sosyoekonomik durum veya coğrafi konum fark etmeksizin herkes için erişilebilir olmalıdır. Dijital uçurumu kapatmak ve tüm insanlığın bu küresel kaynaktan yararlanmasını sağlamak için çalışmalıyız.
 
-Hüma'nın tepkisidir: Kalıplaşmışlara ayak uydurmak gerektiği savunulsa da biz kalıplaşmışların ardında kalacağız ve buradan kalıplara karşı duruşumuza gideceğiz.
+2. **İfade Özgürlüğü:** İnternet, fikirlerin, görüşlerin ve yaratıcı eserlerin özgürce paylaşılabileceği açık bir forum olmalıdır. Sansür ve baskı girişimlerine karşı durmalı, çeşitliliği ve açık diyaloğu teşvik etmeliyiz.
 
-### 2. Kalıpsız Bir Dünya
-Özgürlüğün en büyük göstergelerinden biri, kendi kararını verebilme yetisidir. Ancak bu kararı verirken, şeylerden bağımsız öz kararın verilmesi en büyük husustur. Bizce kalıplar burada en büyük düşmanımızdır. Kalıplar hayatı kolaylaştırabilir, ancak bu, onların yararlı olduğunu göstermez. Hüma, çeşitli kalıplarda değerlendirilebilir ancak bu kalıplara uymak zorunda değildir.
+3. **Gizlilik ve Veri Egemenliği:** Her bireyin kişisel verilerini kontrol etme ve çevrimiçi gizliliğini koruma hakkı vardır. Gözetim, veri madenciliği ve kişisel bilgilerin kötüye kullanılmasına karşı mücadele etmeliyiz.
 
-Hüma'nın tepkisidir: Hüma projesinde ilk karşı geldiğimiz kalıplardan biri, evrensel düşüncelerin sadece İngilizce olması gerektiğinin savunulmasıdır. Keşke bu sadece savunulabilen bir şey olsaydı, ancak şu durumda bu, birçok yerde zorunluluk haline dönüşüp kalıplaşmıştır. Hüma, Türkiye'de geliştirilen bir projedir ve Türk destanlarından etkilenerek "Hüma" ismini seçmiştir. "Ü" harfinin İngiliz alfabesinde olmadığı için sıkça neden "ü" kullanıldığı sorulmuş ve bunun değiştirilmesi gerektiği söylenmiştir. Ancak bizce bu bir kural olmamalıdır. Diller kültürdürler ve kültürleri tanımak bizce önemlidir. Farklılıklar, bizi bir arada tutan ve güçlendiren unsurlardır. Farklı kültürler bu nedenle son derece önemlidir, ancak bunlar tek bir dilin kalıplaşıp evrenselleşmesi altında ezilmektedir. İnsanlar yeni projeler ile yeni kültürleri tanımalıdırlar.
+4. **Tarafsız Ağ:** İnternet tarafsız kalmalı, içerik veya hizmetler arasında ayrım yapılmamalıdır. Büyük şirketler veya hükümetler tarafından manipüle edilmemeli veya kontrol edilmemelidir.
 
-### 3. Şeffaflık
-Hüma her durumda şeffaf kalacaktır. Suyun berraklığını bozabilecek her durum karşısında direnilecektir. Hüma, şeffaflık ilkeleri altında özgür ve açık kaynak yazılım olmayı benimsemiştir. Bu sayede proje, olabildiğince şeffaf kalacaktır.
+5. **Açık Kaynak ve Şeffaflık:** İnternetin temel altyapısı ve protokolleri açık, şeffaf ve işbirliğine dayalı olmalıdır. Kapalı sistemlere ve tekelleşmeye karşı çıkmalı, yeniliği ve rekabetin önünü açmalıyız.
 
-### Değerlerimiz:
-- *Özgürlüğünü hayatın pahasına savun ve bu yolda yürü.*
-- *Halka değil, yoldaşlara seslen.*
-- *Özgürlükte, özgür erişim önemlidir. Erişimi olabildiğince kolay tut ki, özgürlüğe erişimde ayrım olmasın.*
-- *Sana sunulan kalıplar karşısında diren, gerekiyorsa kendi kalıbın olsun. Yine de bu kalıp altında kendini kaybetme.*
-- *Sana dayatılanı değil, senin istediğini kabul et.*
-- *Her daim kendine yetmeyi ve kendi ışığını saçabilmeyi öğren.*
-- *Kimsenin ışığı değil, senin ışığın parlamalıdır.*
+6. **Dijital Haklar:** İnternet kullanıcıları temel insan haklarına sahip olmalıdır. Bu haklar arasında adil yargılanma, mahremiyet ve düşünce özgürlüğü yer alır ve bu haklar çevrimiçi ortamda da korunmalıdır.
+
+7. **Eğitim ve Dijital Okuryazarlık:** Herkes, interneti güvenli ve etkili bir şekilde kullanmak için gerekli becerilere ve bilgiye erişebilmelidir. Dijital okuryazarlığı teşvik etmeli ve yaşam boyu öğrenmeyi desteklemeliyiz.
+
+8. **Yenilik ve Yaratıcılık:** İnternet, yeni fikirlerin, teknolojilerin ve iş modellerinin geliştirilmesi için açık bir platform olmalıdır. Aşırı düzenlemelerden ve kısıtlamalardan kaçınmalı, girişimciliği ve yaratıcılığı teşvik etmeliyiz.
+
+9. **Güvenlik ve Güven:** İnternet kullanıcıları, çevrimiçi tehditlere, siber saldırılara ve zararlı içeriğe karşı korunmalıdır. Ancak bu güvenlik önlemleri, temel özgürlükleri ve gizliliği ihlal etmemelidir.
+
+10. **Küresel İşbirliği:** İnternetin yönetişimi, tüm paydaşların katılımıyla şeffaf ve demokratik bir şekilde gerçekleştirilmelidir. Tek bir ülke veya kurumun kontrolünden kaçınmalı, küresel işbirliğini teşvik etmeliyiz.
+
+Bu ilkeler doğrultusunda, özgür, açık ve herkes için erişilebilir bir internet için mücadele etmeye devam edeceğiz. İnternetin potansiyelini tam olarak gerçekleştirmesi ve insanlığın ilerlemesine katkıda bulunması için çalışacağız.
+ 
