--- a/src/content/docs/docs.mdx
+++ b/src/content/docs/docs.mdx
@@ -1,13 +1,11 @@
 ---
- 
 title: "Hakkında"
 description: "Hüma Hakkında"
 ---
- 
 
 # Hüma Tarayıcı
 
-Hüma açık kaynak geliştirişmiş bir web tarayıcı projedir. İlk olarak QtWebEngine sonrasında Electron kullansada güncel olarak Firefox tarayıcısının tabanı üzerine yazılmış deneysel bir tarayıcıdır. İnternette özgürlüğü ve gizliliği sağlamayaya odaklanarak geliştiriliyordur. 
+Hüma, açık kaynak kodlu olarak geliştirilmiş bir web tarayıcı projesidir. İlk olarak QtWebEngine, ardından Electron kullanılarak geliştirilmiş, ancak günümüzde Firefox tarayıcısının tabanı üzerine inşa edilmiş deneysel bir tarayıcıdır. Hüma, internette özgürlüğü ve gizliliği sağlamaya odaklanarak geliştirilmektedir.
 
 :::note
 Hüma, Türk mitolojisinin bir parçası olan Hüma kuşundan esinlenerek adlandırılmıştır. Hüma kuşu, cennet kuşu olarak bilinir ve cennette uçar. Hüma kuşunun üzerinden geçen kişilerin yüceleceğine ve tahta geçeceğine inanılır. Hüma tarayıcısı, Türk mitolojisinin bu özelliğini taşıyarak, kullanıcılarına yükselme ve tahta geçme fırsatı sunmayı hedefler.
@@ -21,5 +19,8 @@ Hüma Egehan KAHRAMAN tarafından 2024 yılının Ocak ayında araştırılmaya 
 
 Tarayıcı o günden bu güne İnternetin özgür kalabilmesi sürekli geliştirilmeye devam ediyor. Şu anda Hüma tarayıcısının bir ekibi yoktur, sadece Egehan KAHRAMAN tarafından geliştirilmektedir ancak bir takım kurmak ve projeyi daha büyük bir yapıya taşımak istemektedir. 
 
-## Ekran Görüntüleri 
+## Ekran Görüntüleri
 
+<img src="https://raw.githubusercontent.com/VastSea0/flatpak/main/363460432-514de8f9-e6d1-43fc-b568-2bc2ce1433ae.png"/>
+<img src="https://raw.githubusercontent.com/VastSea0/flatpak/main/image.png"/>
+<img src="https://raw.githubusercontent.com/VastSea0/flatpak/main/image-1.png"/>
