--- a/src/content/docs/features.mdx
+++ b/src/content/docs/features.mdx
@@ -5,7 +5,26 @@ description: Hüma tarayıcısının özellikleri
 
 ## Temel özellikler
 
-Hüma, yerli ve açık kaynaklı bir web tarayıcısıdır. Firefox tabanlı olarak geliştirilen bu tarayıcı, gizlilik odaklı tasarımı ve özelleştirilebilir özellikleriyle öne çıkar. Hüma, kendi temasının yanı sıra sayfalar arasında gezinmeyi kolaylaştıran Hüma Gezgini, dikey sekme desteği, internetsiz çalışan Hüma Tarih ve Mitoloji sayfaları, dosya paylaşımı için 10MB sınırı olan Hüma Bulut ve Türkçe söz dizimine sahip betik yazma aracı Hüma Betik gibi özellikler sunar. Pardus ekosistemine katkı sağlamayı amaçlayan Hüma, Türk mitolojisi ve tarihi hakkında da bilgi içermektedir. 
+### Hüma Tarayıcısı Nedir?
+
+Hüma Tarayıcısı, kullanıcıların internet deneyimlerini daha verimli, güvenli ve kişiselleştirilmiş hale getirmek için geliştirilmiş modern bir web tarayıcısıdır. Hüma, kullanıcı dostu arayüzü ve güçlü özellikleri ile öne çıkar.
+
+### Hüma'nın Temel Özellikleri
+
+- **Güvenlik:** Hüma, kullanıcıların gizliliğini korumak için gelişmiş güvenlik önlemleri sunar. İzleyici engelleyici ve güvenli tarama modları ile kullanıcı verilerini korur.
+- **Hız:** Hüma, hızlı ve akıcı bir tarama deneyimi sunar. Optimize edilmiş motoru sayesinde web sayfaları hızlıca yüklenir.
+- **Özelleştirilebilirlik:** Kullanıcılar, tarayıcıyı kendi ihtiyaçlarına göre özelleştirebilirler. Tema seçenekleri, eklentiler ve kişiselleştirilebilir arayüz ile tarayıcıyı istedikleri gibi şekillendirebilirler.
+- **Dikey Sekmeler:** Dikey sekme düzeni ile daha fazla sekme kullanımını optimize eder ve kullanıcı deneyimini iyileştirir.
+- **Çalışma Alanları:** Farklı görevler ve projeler için ayrı çalışma alanları oluşturarak internet deneyimini organize eder.
+
+### Hüma'nın Avantajları
+
+- **Kullanıcı Dostu Arayüz:** Basit ve anlaşılır arayüzü ile herkesin kolayca kullanabileceği bir tarayıcıdır.
+- **Gelişmiş Performans:** Hafif yapısı ve optimize edilmiş motoru ile yüksek performans sunar.
+- **Güçlü Özellikler:** Dikey sekmeler, çalışma alanları ve Hüma Gezgini gibi özellikler ile kullanıcıların ihtiyaçlarına cevap verir.
+- **Sürekli Güncellemeler:** Hüma, sürekli olarak güncellenir ve yeni özellikler eklenir. Kullanıcılar, her zaman en yeni ve en iyi deneyimi yaşarlar.
+
+Hüma Tarayıcısı, internet deneyiminizi bir üst seviyeye taşımak için tasarlanmış güçlü ve esnek bir tarayıcıdır.
 
 :::note
 Hüma sürekli geliştirilmektedir yeni özellikleri edinmek için tarayıcının güncel olduğundan emin olun
@@ -13,7 +32,7 @@ Hüma sürekli geliştirilmektedir yeni özellikleri edinmek için tarayıcını
 
 ## Dikey Sekmeler
 
-<img src="../../assets/image.png" />
+<img src="https://raw.githubusercontent.com/Huma-Browser/web/7834648f158ee34a549347b08cc0d674864a8213/src/assets/image.png" />
 
 Dikey sekmeler: Hüma Tarayıcısı için Yenilikçi Dikey Sekme Eklentisi
 
@@ -28,6 +47,23 @@ Dikey sekmeler, Hüma tarayıcısında kullanıcı deneyimini büyük ölçüde 
     - Sürükle ve Bırak Desteği: Sekmeleri sürükleyerek yeniden düzenleme ve gruplama yapabilme kolaylığı sağlar.
     - Performans Odaklı: Hafif yapısıyla tarayıcı performansını olumsuz etkilemeden kullanıcıya yüksek performans sunar.
 
+
+## Çalışma Alanları
+
+<img src="https://raw.githubusercontent.com/Huma-Browser/web/main/src/assets/workspaces.png" />
+
+Hüma Tarayıcısı'nın çalışma alanları özelliği, kullanıcıların internet deneyimlerini organize etmelerine ve yönetmelerine yardımcı olan güçlü bir araçtır. Bu özellik, farklı görevler, projeler veya ilgi alanları için ayrı "çalışma alanları" oluşturmanıza olanak tanır.
+
+
+### **Özellikler:**
+
+- Çoklu Oturumlar: Kullanıcılar, farklı amaçlar için birden fazla çalışma alanı oluşturabilir. Örneğin, iş, kişisel araştırma ve eğlence için ayrı alanlar oluşturulabilir.
+
+- Hızlı Geçiş: Çalışma alanları arasında kolayca geçiş yapabilme imkanı sunar. Bu, farklı görevler arasında hızlı ve verimli bir şekilde hareket etmenizi sağlar.
+
+- Özelleştirilebilir İsimler: Her çalışma alanına özel bir isim verilebilir, böylece hangi alanın hangi amaçla kullanıldığını kolayca hatırlayabilirsiniz.
+
+- Sekme Grupları: Her çalışma alanı, ilgili sekmeleri bir arada tutar. Bu, belirli bir projeye veya göreve ait tüm sekmeleri tek bir yerde organize etmenizi sağlar.
 
 ## Hüma Gezgini
 
