--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -22,10 +22,10 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
  
 <center>
    <h2>Hoş Geldiniz!</h2>
-
+ 
 </center>
 <div class="container">
-  <img class="background-image" src="https://firebasestorage.googleapis.com/v0/b/vastsea-blog.appspot.com/o/mUj553KYSMNLQxdU68FR2cl0AFG3%2FEkran%20G%C3%B6r%C3%BCnt%C3%BCs%C3%BC%20-%202024-08-11%2005-34-59.png?alt=media&token=3f288f95-a4a2-4066-9eff-ce90cf23b23d" alt="Background" />
+  <img class="background-image" src="https://raw.githubusercontent.com/VastSea0/flatpak/main/363460432-514de8f9-e6d1-43fc-b568-2bc2ce1433ae.png" alt="Background" />
   <div class="overlay"></div>
   <div class="content">
  <center>
@@ -34,13 +34,13 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 </center>
 
     <CardGrid stagger>
-	<Card title="Özgür ve açık kaynak" icon="pencil">
-		Hüma özgür yazılımdır. Kaynak kodları açıktır bu sayede kaynak kodlarını değiştirebilirsiniz
+	<Card title="Çalışma Alanları" icon="pencil">
+		Farklı görevler ve projeler için ayrı çalışma alanları oluşturun
 	</Card>
 	<Card title="Gizlilik odaklı" icon="information">
 		Hüma gizlilik odaklıdır, telemetri göndermez
 	</Card>
-	<Card title="Dikey sekmeler ve ek özelleştirmeler" icon="setting">
+	<Card title="Dikey sekmeler" icon="setting">
 		Tarayıcınızı dilediğiniz gibi özgürce özelleştirin
 	</Card>
 	<Card title="Kenar Çubuğu" icon="open-book">
